--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "file-saver": "^2.0.5",
+    "frontend": "file:",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "xlsx": "^0.18.5",
